fix : z-index

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,7 +6,7 @@
   width: 100%;
   position: fixed;
   display: flex;
-  z-index: 1;
+  z-index: 999999;
   justify-content:space-between
 }
 .header {
